feat: added macro layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Viaggio a Londra</title>
 </head>
 <body>
-    
+    <!--intestazione del sito con titolo e foto-->
+    <header>header</header>
+    <!--corpo del documento con dettagli del viaggio-->
+    <main>main</main>
+    <!--piede del documento con foto-->
+    <footer>footer</footer>
 </body>
 </html>
