--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viaggio a Londra</title>
 </head>
+
 <body>
     <!--intestazione del sito con titolo e foto-->
-    <header>header</header>
+    <header>
+        <section>
+            <h1>Il mio Viaggio a Londra</h1>
+            <img src="/img/pexels-bill-emrich-230794-0.jpg" alt="immagine London Eye" width="200">
+            <img src="/img/pexels-bill-emrich-230794-1.jpg" alt="immagine paesaggio Londra" width="200">
+            <img src="/img/pexels-bill-emrich-230794-2.jpg" alt="immagine Big Ben" width="200">
+        </section>
+    </header>
+    <hr>
+
     <!--corpo del documento con dettagli del viaggio-->
     <main>main</main>
     <!--piede del documento con foto-->
     <footer>footer</footer>
 </body>
+
 </html>
