feat: added header section id

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--intestazione del sito con titolo e foto-->
     <header>
-        <section>
+        <section id="header-section">
             <h1>Il mio Viaggio a Londra</h1>
             <img src="/img/pexels-bill-emrich-230794-0.jpg" alt="immagine London Eye" width="200">
             <img src="/img/pexels-bill-emrich-230794-1.jpg" alt="immagine paesaggio Londra" width="200">
