feat: created expenses table

--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
     <hr>
 
     <!--corpo del documento con dettagli del viaggio-->
-    <main>main</main>
+    <main>
+    <!--creazione tabella delle spese-->    
+        <section id="trip-expenses">
+            <h3>Le mie spese</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+            </table>
+        </section>
+    </main>
     <!--piede del documento con foto-->
     <footer>footer</footer>
 </body>
