feat: added to do list section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
             </table>
         </section>
         <hr>
+        <!--lista delle cose da fare a Londra-->
+        <section id="to-do-list">
+            <h4>Cose da fare</h4>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden ✓</li>
+                <li>Mangiare il tipico Fish and Chips inglese ✗</li>
+            </ul>
+        </section>
+        <hr>
     </main>
     <!--piede del documento con foto-->
     <footer>footer</footer>
