feat: created list of useful information

--- a/index.html
+++ b/index.html
@@ -69,6 +69,24 @@
             </ul>
         </section>
         <hr>
+        <!--lista di informazioni utili per il viaggio-->
+        <section id="useful-information">
+            <h4>Info utili:</h4>
+            <ol>
+                <li>
+                    Numeri utili di emergenza <br />
+                    &compfn; <strong>999</strong> - Emergenza <br />
+                    &compfn; <strong>101</strong> - Numero polizia <br />
+                    &compfn; <strong>111</strong> - Numero assistenza medica <br />
+                </li>
+                <li>
+                    Hotel <br />
+                    &compfn; <strong>Nome hotel</strong>: Buckingham Palace <br />
+                    &compfn; <strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito <br />
+                </li>
+                <li>Aereo</li>
+            </ol>
+        </section>
     </main>
     <!--piede del documento con foto-->
     <footer>footer</footer>
