feat: completed list of useful information

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--corpo del documento con dettagli del viaggio-->
     <main>
-    <!--creazione tabella delle spese-->    
+        <!--creazione tabella delle spese-->
         <section id="trip-expenses">
             <h3>Le mie spese</h3>
             <table>
@@ -84,9 +84,14 @@
                     &compfn; <strong>Nome hotel</strong>: Buckingham Palace <br />
                     &compfn; <strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito <br />
                 </li>
-                <li>Aereo</li>
+                <li>
+                    Aereo <br />
+                    &compfn; <strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa <br />
+                    &compfn; <strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow <br />
+                </li>
             </ol>
         </section>
+        <hr>
     </main>
     <!--piede del documento con foto-->
     <footer>footer</footer>
