feat: added footer section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
         <hr>
     </main>
     <!--piede del documento con foto-->
-    <footer>footer</footer>
+    <footer>
+        <h4>Le foto</h4>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto di Londra di sera" width="400">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto di sera del Tower Bridge" width="400">
+    </footer>
+    <!--linea orizzontale nera a conclusione del documento-->
+    <hr color="black">
 </body>
 
 </html>
