feat: added correction

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <section id="header-section">
             <h1>Il mio Viaggio a Londra</h1>
-            <img src="/img/pexels-bill-emrich-230794-0.jpg" alt="immagine London Eye" width="200">
-            <img src="/img/pexels-bill-emrich-230794-1.jpg" alt="immagine paesaggio Londra" width="200">
-            <img src="/img/pexels-bill-emrich-230794-2.jpg" alt="immagine Big Ben" width="200">
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine London Eye" width="200">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="immagine paesaggio Londra" width="200">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="immagine Big Ben" width="200">
         </section>
     </header>
     <hr>
@@ -73,21 +73,24 @@
         <section id="useful-information">
             <h4>Info utili:</h4>
             <ol>
-                <li>
-                    Numeri utili di emergenza <br />
-                    &compfn; <strong>999</strong> - Emergenza <br />
-                    &compfn; <strong>101</strong> - Numero polizia <br />
-                    &compfn; <strong>111</strong> - Numero assistenza medica <br />
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
                 </li>
-                <li>
-                    Hotel <br />
-                    &compfn; <strong>Nome hotel</strong>: Buckingham Palace <br />
-                    &compfn; <strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito <br />
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
                 </li>
-                <li>
-                    Aereo <br />
-                    &compfn; <strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa <br />
-                    &compfn; <strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow <br />
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
+                    </ul>
                 </li>
             </ol>
         </section>
@@ -96,8 +99,10 @@
     <!--piede del documento con foto-->
     <footer>
         <h4>Le foto</h4>
-        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto di Londra di sera" width="400">
-        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto di sera del Tower Bridge" width="400">
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+            alt="Foto di Londra di sera" width="400">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+            alt="Foto di sera del Tower Bridge" width="400">
     </footer>
     <!--linea orizzontale nera a conclusione del documento-->
     <hr color="black">
