--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
             alt="Foto di sera del Tower Bridge" width="400">
     </footer>
-    <!--linea orizzontale nera a conclusione del documento-->
-    <hr color="black">
+    <!--linea orizzontale a conclusione del documento-->
+    <hr>
 </body>
 
 </html>
